Fix unnecessary margin-top issue on mobile

--- a/resources/css/mobile/main.css
+++ b/resources/css/mobile/main.css
@@ -2,10 +2,6 @@ html, body, main {
     display: block;
 }
 
-main {
-    margin-top: 8em;
-}
-
 aside {
     display: none;
 }
